isalone instead of familygroups

--- a/assign1/titanic/titanic_tutorial.ipynb
+++ b/assign1/titanic/titanic_tutorial.ipynb
@@ -2172,100 +2172,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FamilySize</th>\n",
-       "      <th>Survived</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.724138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.578431</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.552795</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>0.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.303538</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>0.136364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   FamilySize  Survived\n",
-       "3           4  0.724138\n",
-       "2           3  0.578431\n",
-       "1           2  0.552795\n",
-       "6           7  0.333333\n",
-       "0           1  0.303538\n",
-       "4           5  0.200000\n",
-       "5           6  0.136364\n",
-       "7           8  0.000000\n",
-       "8          11  0.000000"
+       "<matplotlib.legend.Legend at 0x2a659d2af60>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYgAAAEWCAYAAAB8LwAVAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XmYFeWZ9/HvjyWggmhYjNLExkjcBkHELcSEiKImBjWK\n4G5eHeIaM5lo1CsZNa9mTMbXjJqMIxMVTEQkGgSNiTruGk2g3RUV4kYLkUVtRVFB7vePepocm+ru\nA/Tparp/n+s616l6arvrnO5z1/NU1VOKCMzMzBrqVHQAZmbWNjlBmJlZLicIMzPL5QRhZma5nCDM\nzCyXE4SZmeVygrCySXpR0t5p+CJJkyqwjV9LOq+l11vGdu+SdHRrb7c1SdpX0qtFx7G2JB0v6Y8t\nsJ6TJN3fAiF1GE4Q7YCkVyUtl7Ss5LVVS28nIraLiIfWdz2SJqRk856kv0u6XdImaRsnRcRP1z/a\nT23vYUknNCj71I9lRIyOiBuaWU8XSSGpuiXj2xBJ+ryk6ZKWSKqT9IykYyuxrYiYHBEHVmLd1jQn\niPbjmxHRo+S1oOiA8kgaBVwIHBERPYGdgJuLjaptkNSl6BjWwg3Ay8Dngd7A8cCidVnRBrbfHYoT\nRDsmqZOkm9NR+juS7pe0Q8n030r6paQ7U63jQUlbSLoyzT9H0pCS+WsljczZzp2STmlQ9rykg3LC\n2g14JCKeAoiIpRExKSLeL4npgjT8xwa1olWSjknTdpT0v5LekvSCpMPW87NaXcuQ9MX0WdSlI+Qp\nabYH0/tzKZ7D0vwnS5onaamkWyVtWbLeAyW9lNZ1paRHSrZzUtrOFZLeAn4kaZCk+9K6lkj6jaRe\nJeurlfQDSc+mGCam7+xOSe+mprLNmtnXf0vrf0XS+FS2l6QFkjqVzDdO0uxGVrMbcF1EfBARKyPi\n8Yi4My23RlNW6d9Oap68SdKNkt4DzpX0QYP93E3SolRrW900pKwJ8pIG6/6DpO+m4R9JejnVTp+T\nNKapz8Ka5gTR/t0ODAI+BzwL/KbB9COAc4A+QACPAY+SHRXOAC4tYxuTgWPqRyTtmtb3p5x5HwO+\nIel8SV+S1K2xlUbEgfU1ImA8sBC4T1JP4G7geqAfcDQwUdJ2ZcRajouBPwCbA1XAr1L5V9L7Timu\nWySNBn4CHA70BxaQHV0jqR8wDTiL7PN4Bdi9wba+BMwB+gI/AwRcBGwJ7AhsA/y4wTLfAvYBtgcO\nS7GeTfZZdANOa2LfqoCewFbAicC1kraNiEeB94BRJfMew5p/L/UeA65KSWRAE9trzKHAFKAX2d/Y\n7LRf9Y4CpkXEygbLTQHGSxKApN5kn8VNafpLwIi03ouBKZK2WIf4DCeI9uTWdNT/jqRbASJiVTo6\nfy8iPgQuAHZVau9PbomIJ9L0W4FlETElIj4h+6fbpYxtTwd2krRNGj8WmJrzz01E3E/2Y7ob8Edg\niaT/KD1ybUjS9sC1wNiIeAMYA7wUEdeno9eaFPvhTcT4XyWfzztp/sasAKqBLSPiw4h4pIl5jwZ+\nHRFPps/wHOCrkqqAg4AnI2JGRKwAfgEsabD86xFxVUR8EhHLI+KliLgnIj6OiEVpma82WObyiFgU\nEbXAw8CjEfFUyXfY1He2Cjg/Ij6KiHvJkvjYNO16UqKX1IcsWdzYyHq+RXYgcT7wmqTH04FBuR6O\niNvS3+hysh/+I9O2OwHjUllD9wNdgb3S+BHAQxHxJkBETIuIhWm9U4BXgeFrEZeVcIJoPw6JiM3S\n6xAASZ0l/TxVud8F5qV5+5Qs92bJ8PKc8R7NbTj9g98MHC2pM9nRfmNHnkTEHyLiILIj9G8B/wx8\nO2/e1FwyEzg3Iv6circGRjT4wR9HdtTdmFNLPp/NgEOamPdfyX6EZis7+Xp8E/NuBbxWsm/vAm+T\n1Sa2AuaXTAugtsHy80tHJH1O0jRJb6TvbBKf/r5g/b6zpRHxQcn4aylOyL6zQyRtTPYd3peS1Boi\n4q2IODsidgS2AJ4jO1Ao1/wG478D9k5H+18DPiz5vku3u4rswOXIVHQUqcYGIOkESU+V/F1sz5qf\nn5XJCaJ9Ow74OlkVvBewbSpXBbY1mexoejTwdkTMam6BdJR3N9lR4T81nJ6SzVTgTxFxTcmk+cA9\npT/4qcnn9JbYkXQEelJEbEnWXDNR0kCyJriGFpAlrPqYe5IlvjfImsSqSqaJLHF8anMNxn8GfAQM\njohNgRNo2e+rt6SNSsY/T7YPRMTrZE09B5PVAhtN8qUiYjHw/4AB6TzC+8DG9dOVnYTu3XCxButY\nCtxLVps5isZrLqRpR6TvZBgpMaUa7FXAKUDvdCDwApX5e+8QnCDat55kPzZLyf5hL67gth4mO+r+\nGU38sEg6VNIRkjZXZk9gb7I27YYuSev8foPymWRNWkdJ6ppeu7fUOYgUX/0P+TtkP2afpGa3pWTn\nBerdCJwoaed0PuXfyZo8asnO/wyT9M30I3km2bmGpvQk+4GtS237P2iJfSrRCbhA0mfSSeMD+fRV\nZNcD55Idec9obCWpZrpTqqVuSvaj/EJE1JH9KPeUtL+krmTNUF3LiG0K2dVQ3yK/eQmAdPBRB0wE\n7ki1NshqTgEszkLUSWk/bB05QbRv15EdHS4gawJYo8reUlLzyW/IagJN3U/wDnAyWXPXu2Q1j59G\nxE058x5JdhL3Hf3jSqZx6Udof7L28oXA38l+mBs94b2W9gBmSXof+D1wWjq6huzHbkpqwvhWRPyJ\n7CT19BTL58lqUqR28XHAZWSJ5QvAE2RJuzHnk53IriNLhLe00D7VqyVLQAvJPvuTImJuyfRbyBLg\nzanpsDE9yBJIHfA3smaqQwAi4m3gjLT+N4C3yL6j5txKdmL+9Yh4rpl5bwT2pSSRRMTTwBXAX9P+\nbQ/8pYztWiPkBwZZS5H0f4DjImJk0bG0RanJbAFweEvccFgJqRnsFeCEdEGBdWCuQViLSCc2TyWr\n9lsi6QBJvVLz04+BlWRHuG3VEWQ1nAeKDsSK5wRh603SN8jafV/nH9ejW+bLZHccLwEOILvarKkm\npsJIepisiea0cNOC4SYmMzNrhGsQZmaWa4PuJKtPnz5RXV1ddBhmZhuUmpqaJRHR3CXXG3aCqK6u\nZvbsxvoSMzOzPJJea34uNzGZmVkjnCDMzCyXE4SZmeXaoM9BmFn7t2LFCmpra/nwww+LDmWD0717\nd6qqqujatZyusNbkBGFmbVptbS09e/akurqa9JwgK0NEsHTpUmpraxk4cOA6rcNNTGbWpn344Yf0\n7t3byWEtSaJ3797rVfNygjCzNs/JYd2s7+fmBGFmZrl8DsLMNii6sGVrE3F+ef3RXXzxxUyZMoXO\nnTvTqVMnrr76avbYY4/12vbMmTN5/vnnOeecc9ZrPQA9evRg2bJl672eUh03QRRZZXUHiWYblEcf\nfZTbb7+dxx9/nG7durFkyRI+/vjjspZduXIlXbrk/9SOGTOGMWPGtGSoLcpNTGZmzVi4cCF9+vSh\nW7fsoYV9+vRhq622orq6miVLlgAwe/ZsRo4cCcAFF1zAhAkTGD16NMcddxx77LEHzz33j4fkjRw5\nkpqaGiZNmsTpp59OXV0d1dXVrFq1CoAPPviAAQMGsGLFCv72t79xwAEHsOuuu7L33nvzwgsvAPDK\nK6+w1157sdtuu/HjH/+4IvvtBGFm1ozRo0czf/58vvjFL3LqqafywAPNP0+ppqaGGTNmMGXKFMaP\nH8+0adOALNksWLCAXXfddfW8vXr1YsiQIavXe9ttt7H//vvTtWtXJkyYwJVXXklNTQ2XXnopp556\nKgBnnnkmp5xyCrNmzeJzn/tcBfbaCcLMrFk9evSgpqaGiRMn0rdvX8aNG8ekSZOaXGbMmDFstNFG\nABxxxBH87ne/A2DatGmMHTt2jfnHjRvHTTdlz9uaOnUq48aNY9myZfz5z39m7NixDB06lO985zss\nXLgQgEceeYQjjzwSgGOPPbaldvVTOu45CDOztdC5c2dGjhzJyJEjGTx4MJMnT6ZLly6rm4Ua3m+w\nySabrB7u378/vXv35umnn+amm27i6quvXmP9Y8aM4dxzz+Wtt96ipqaGffbZh/fff5/NNtuMJ598\nMjemSl/+6xqEmVkzXnzxRebOnbt6/Mknn2TrrbemurqampoaAG655ZYm1zF+/Hh+/vOfU1dXx+DB\ng9eY3qNHD3bffXfOPPNMDjroIDp37symm27KwIEDV9c+IoKnnnoKgBEjRjB16lQAbrjhhhbZz4Zc\ngzCzDUq5l6W2pGXLlnHGGWfwzjvv0KVLF7bddlsmTpzInDlzOPHEE/npT3/a7CWvhx9+OGeeeWaT\nJ5THjRvH2LFjuf/++1eX3XDDDZxyyilcdNFFrFixgvHjxzNkyBAuv/xyjjrqKC6//HIOO+ywltrV\nT9mgn0k9fPjwWOcHBvkyV7MNwpw5c9hhhx2KDmODlff5SaqJiOHNLesmJjMzy+UEYWZmuZwgzMws\nV0UThKRXJT0j6UlJs1PZZyXdLWluet88lUvSFZLmSXpa0rBKxmZmZk1rjRrE1yJiaMkJkXOAeyJi\nEHBPGgc4EBiUXhOAq1ohNjMza0QRTUwHA5PT8GTgkJLy6yPzGLCZpC0LiM/MzKh8ggjgLkk1kiak\nsi0iYiFAeu+XyvsD80uWrU1lnyJpgqTZkmYvXry4gqGbWZskteyrDJ07d2bo0KHstNNODBkyhMsu\nu2z1HdTr64ILLuDSSy9tkXW1tErfKDciIhZI6gfcLemFJubN+6bWuGEgIiYCEyG7D6JlwjQza9xG\nG220uruLRYsWcdRRR1FXV8eFF15YcGSVVdEaREQsSO+LgOnA7sCb9U1H6X1Rmr0WGFCyeBWwoJLx\nmZmtrX79+jFx4kR++ctfEhF88sknnHXWWey2227svPPOq/tZWrZsGaNGjWLYsGEMHjyYGTNmrF7H\nxRdfzHbbbce+++7Liy++WNSuNKtiNQhJmwCdIuK9NDwa+AkwEzgeuCS9139qM4HTJU0F9gDq6pui\nzMzakm222YZVq1axaNEiZsyYQa9evZg1axYfffQRI0aMYPTo0QwYMIDp06ez6aabsmTJEvbcc0/G\njBnD448/ztSpU3niiSdYuXIlw4YN+1TX321JJZuYtgCmp94GuwBTIuJPkmYB0ySdCLwO1Pd7ewfw\ndWAe8AHw7QrGZma2Xuq7Kbrrrrt4+umnufnmmwGoq6tj7ty5VFVVcd555/Hggw/SqVMn3njjDd58\n800eeughDj30UDbeeGOANv1EuYoliIh4GRiSU74UGJVTHsBplYrHzKylvPzyy3Tu3Jl+/foREVx5\n5ZXsv//+n5pn0qRJLF68mJqaGrp27Up1dfXqLsEr3U13S/Gd1GZma2Hx4sWcfPLJnH766Uhi//33\n56qrrmLFihUAvPTSS7z//vvU1dXRr18/unbtyn333cdrr70GwFe+8hWmT5/O8uXLee+997jtttuK\n3J0mubtvM9uwFNAb8vLlyxk6dCgrVqygS5cuHHvssXz/+98H4KSTTuLVV19l2LBhRAR9+/bl1ltv\n5eijj+ab3/wmw4cPZ+jQoWy//fYADBs2jHHjxjF06FC23npr9t5771bfn3K5u+8ibMCfuVlrc3ff\n68fdfZuZWYtzgjAzs1xOEGbW5m3ITeFFWt/PzQnCzNq07t27s3TpUieJtRQRLF26lO7du6/zOnwV\nk5m1aVVVVdTW1uLOOdde9+7dqaqqWuflnSDMrE3r2rUrAwcOLDqMDslNTGZmlssJwszMcjlBmJlZ\nLicIMzPL5QRhZma5nCDMzCyXE4SZmeVygjAzs1xOEGZmlssJwszMcjlBmJlZLicIMzPL5QRhZma5\nnCDMzCyXE4SZmeVygjAzs1xOEGZmlssJwszMcjlBmJlZLicIMzPLVfEEIamzpCck3Z7GB0r6i6S5\nkm6S9JlU3i2Nz0vTqysdm5mZNa41ahBnAnNKxn8G/CIiBgFvAyem8hOBtyNiW+AXaT4zMytIRROE\npCrgG8Cv07iAfYCb0yyTgUPS8MFpnDR9VJrfzMwKUOkaxH8CZwOr0nhv4J2IWJnGa4H+abg/MB8g\nTa9L85uZWQEqliAkHQQsioia0uKcWaOMaaXrnSBptqTZixcvboFIzcwsTyVrECOAMZJeBaaSNS39\nJ7CZpC5pnipgQRquBQYApOm9gLcarjQiJkbE8IgY3rdv3wqGb2bWsVUsQUTEuRFRFRHVwHjg3og4\nGrgPODzNdjwwIw3PTOOk6fdGxBo1CDMzax1F3AfxQ+D7kuaRnWO4JpVfA/RO5d8HzikgNjMzS7o0\nP8v6i4j7gfvT8MvA7jnzfAiMbY14zMyseb6T2szMcjlBmJlZrmYThKSxknqm4R9J+r2kYZUPzczM\nilRODeLHEfGepC8D+5Pd7XxVZcMyM7OilZMgPknv3wCuiogZwGcqF5KZmbUF5SSINyRdDRwB3CGp\nW5nLmZnZBqycH/ojgDuBAyLiHeCzwFkVjcrMzArX5H0QkjoBf42If6ovi4iFwMJKB2ZmZsVqsgYR\nEauApyR9vpXiMTOzNqKcO6m3BJ6T9Ffg/frCiBhTsajMzKxw5SSICysehZmZtTnNJoiIeEDS1sCg\niPhfSRsDnSsfmpmZFamcO6n/mewRoFenov7ArZUMyszMilfOZa6nkT38512AiJgL9KtkUGZmVrxy\nEsRHEfFx/Uh62psf5GNm1s6VkyAekHQesJGk/YDfAbdVNiwzMytaOQniHGAx8AzwHeAO4EeVDMrM\nzIpXzlVMq4D/SS8zM+sgmk0Qkp5hzXMOdcBs4KKIWFqJwMzMrFjl3Cj3R7Iuv6ek8fHp/V1gEvDN\nlg/LzMyKVk6CGBERI0rGn5H0SESMkHRMpQIzM7NilXOSuoekPepHJO0O9EijKysSlZmZFa6cGsRJ\nwLWSegAia1o6SdImwL9XMjgzMytOOVcxzQIGS+oFKD00qN60ikVmZmaFKucqpm7AYUA10EUSABHx\nk4pGZmZmhSqniWkG2WWtNcBHlQ3HzMzainISRFVEHFDxSMzMrE0p5yqmP0saXPFIzMysTSmnBvFl\n4ARJr5A1MQmIiNi5opGZmVmhykkQB1Y8CjMza3OabWKKiNeAAcA+afiDcpaT1F3SXyU9Jek5SRem\n8oGS/iJprqSbJH0mlXdL4/PS9Or12TEzM1s/5fzQnw/8EDg3FXUFflvGuj8iSypDgKHAAZL2BH4G\n/CIiBgFvAyem+U8E3o6IbYFfpPnMzKwg5ZykPhQYA7wPEBELgJ7NLRSZZWm0a3oFsA/ZM64BJgOH\npOGD0zhp+ijV33RhZmatrpwE8XFEBKnL79TFRlkkdZb0JLAIuBv4G/BORNT34VQL9E/D/YH5AGl6\nHdA7Z50TJM2WNHvx4sXlhmJmZmupnAQxTdLVwGaS/hn4X8p8eFBEfBIRQ4EqYHdgh7zZ0ntebWGN\nZ19HxMSIGB4Rw/v27VtOGGZmtg7K6Yvp0vQs6neB7YB/i4i712YjEfGOpPuBPckSTZdUS6gCFqTZ\naslOhtdK6gL0At5am+2YmVnLKeck9SbAvRFxFlnNYSNJXctYrq+kzdLwRsC+wBzgPuDwNNvxZF15\nAMxM46Tp96amLTMzK0A590E8COwtaXOy5qXZwDjg6GaW2xKYLKkzWSKaFhG3S3oemCrpIuAJ4Jo0\n/zXAbyTNI6s5jM9bqZmZtY5yEoQi4gNJJwJXRsTPJT3R3EIR8TSwS075y2TnIxqWfwiMLSMeMzNr\nBeWcpJakvchqDH9IZeUkFjMz24CVkyC+R3aT3PSIeE7SNmTnEczMrB0r5yqmB4AHACR1ApZExHcr\nHZiZmRWrnKuYpkjaNF3N9DzwoqSzKh+amZkVqZwmph0j4l2yLjHuAD4PHFvRqMzMrHDlJIiu6b6H\nQ4AZEbGCnDuczcysfSknQVwNvApsAjwoaWuyu6rNzKwdK+ck9RXAFSVFr0n6WuVCMjOztqCs+xkk\nfQPYCeheUvyTikRkZmZtQjlXMf03WdcaZ5D1uDoW2LrCcZmZWcHKOQfxpYg4juxpbxcCe5H1umpm\nZu1YOQlieXr/QNJWwApgYOVCMjOztqCccxC3p267/wN4nOwS17IeGGRmZhuucq5i+r9p8BZJtwPd\nI6KusmGZmVnRGm1ikjRI0gxJz0q6UVL/iPjIycHMrGNo6hzEtcDtwGFkTUtXtkpEZmbWJjTVxNQz\nIurPNfyHpMdbIyAzM2sbmkoQ3SXtQnbvA2TPol49HhFOGGZm7VhTCWIhcFnJ+N9LxgPYp1JBmZlZ\n8RpNEBHh/pbMzDqwcm6UMzOzDsgJwszMcjV1H8SI9N6t9cIxM7O2oqkaRP0zIB5tjUDMzKxtaeoq\nphWSrgP6S7qi4cSI+G7lwjIzs6I1lSAOAvYlu5y1pnXCMTOztqKpy1yXAFMlzYmIp1oxJjMzawPK\nuYppqaTpkhZJelPSLZKqKh6ZmZkVqpwEcR0wE9gK6A/clsrMzKwdKydB9IuI6yJiZXpNAvpWOC4z\nMytYOQlisaRjJHVOr2OApc0tJGmApPskzZH0nKQzU/lnJd0taW563zyVS9IVkuZJelrSsPXbNTMz\nWx/lJIj/AxxB1lnfQuDwVNaclcC/RsQOwJ7AaZJ2BM4B7omIQcA9aRzgQGBQek0ArlqL/TAzsxZW\nziNHXwfGrO2KI2IhWUIhIt6TNIfsHMbBwMg022TgfuCHqfz6iAjgMUmbSdoyrcfMzFpZq/TFJKka\n2AX4C7BF/Y9+eu+XZusPzC9ZrDaVNVzXBEmzJc1evHhxJcM2M+vQKp4gJPUAbgG+FxHvNjVrTlms\nURAxMSKGR8Twvn19rtzMrFIqmiAkdSVLDjdExO9T8ZuStkzTtwQWpfJaYEDJ4lXAgkrGZ2ZmjWs2\nQUj6Uclw2T27ShJwDTAnIkqfTDcTOD4NHw/MKCk/Ll3NtCdQ5/MPZmbFaaq777Ml7UV21VK9tenZ\ndQRwLLCPpCfT6+vAJcB+kuYC+6VxgDuAl4F5wP8Ap67FtszMrIU1dRXTi8BYYBtJDwFzgN6StouI\nF5tbcUQ8TP55BYBROfMHcFrzIZuZWWtoqonpbeA8siP6kfzj+RDnSPpzheMyM7OCNVWDOAA4H/gC\ncBnwFPB+RHy7NQIzM7NiNVqDiIjzImIU8CrwW7Jk0lfSw5Jua6X4zMysIM3eSQ3cGRGzgFmSTomI\nL0vqU+nAzMysWM1e5hoRZ5eMnpDKllQqIDMzaxvW6kY5P1nOzKzjaJW+mMzMbMPjBGFmZrnKOUnd\nLumC4ra9Rg+EZmZtUIdNEIVSYzeYV1g4NZlZ+dzEZGZmuZwgzMwslxOEmZnlcoIwM7NcThBmZpbL\nCcLMzHI5QZiZWS4nCDMzy+UEYWZmuZwgzMwslxOEmZnlcoIwM7NcThBmZpbLCcLMzHI5QZiZWS4n\nCDMzy+UEYWZmuZwgzMwslxOEmZnlqliCkHStpEWSni0p+6ykuyXNTe+bp3JJukLSPElPSxpWqbjM\nzKw8laxBTAIOaFB2DnBPRAwC7knjAAcCg9JrAnBVBeMyM7MyVCxBRMSDwFsNig8GJqfhycAhJeXX\nR+YxYDNJW1Yqtg5LKu5lZhuc1j4HsUVELARI7/1SeX9gfsl8talsDZImSJotafbixYsrGqyZWUfW\nVk5S5x1iRt6METExIoZHxPC+fftWOCwzs46rtRPEm/VNR+l9USqvBQaUzFcFLGjl2MzMrERrJ4iZ\nwPFp+HhgRkn5celqpj2BuvqmKDMzK0aXSq1Y0o3ASKCPpFrgfOASYJqkE4HXgbFp9juArwPzgA+A\nb1cqrrZAFxSz3Shou2a2YapYgoiIIxuZNCpn3gBOq1QsZma29trKSWozM2tjnCDMzCyXE4SZmeVy\ngjAzs1xOEGZmlssJwszMcjlBmJlZLicIMzPL5QRhZma5nCDMzCxXxbrasLanqD6goJG+282sTXMN\nwszMcjlBmJlZLicIMzPL5QRhZma5nCDMzCyXE4SZmeVygjAzs1xOEGZmlssJwszMcjlBmJlZLicI\nMzPL5b6YrHVIxWw33AuU2bpyDcLMzHK5BmFWCUXVmMC1JmsxThDWKorqatw/lWbrzk1MZmaWyzUI\na9+KbOox28A5QZi1N75izFqIm5jMzCxXm0oQkg6Q9KKkeZLOKToeM1sLUnEv73NFtJkmJkmdgV8B\n+wG1wCxJMyPi+WIjM9uwFHbFWEHbtcppMwkC2B2YFxEvA0iaChwMOEHYOivqx9KsPWhLCaI/ML9k\nvBbYo+FMkiYAE9LoMkkvtkJsLa0PsKToIFpZR9vnjra/qMh9Lq6ZaUPd563LmaktJYi8vV3jsoiI\nmAhMrHw4lSNpdkQMLzqO1tTR9rmj7S94n9ujtnSSuhYYUDJeBSwoKBYzsw6vLSWIWcAgSQMlfQYY\nD8wsOCYzsw6rzTQxRcRKSacDdwKdgWsj4rmCw6qUDbqJbB11tH3uaPsL3ud2R+G7H83MLEdbamIy\nM7M2xAnCzMxyOUG0EkkDJN0naY6k5ySdWXRMrUVSZ0lPSLq96Fhag6TNJN0s6YX0fe9VdEyVJulf\n0t/1s5JulNS96JhamqRrJS2S9GxJ2Wcl3S1pbnrfvMgYW5oTROtZCfxrROwA7AmcJmnHgmNqLWcC\nc4oOohVdDvwpIrYHhtDO911Sf+C7wPCI+Ceyi0zGFxtVRUwCDmhQdg5wT0QMAu5J4+2GE0QriYiF\nEfF4Gn6P7Eejf7FRVZ6kKuAbwK+LjqU1SNoU+ApwDUBEfBwR7xQbVavoAmwkqQuwMe3wHqaIeBB4\nq0HxwcDkNDwZOKRVg6owJ4gCSKoGdgH+UmwkreI/gbOBVUUH0kq2ARYD16VmtV9L2qTooCopIt4A\nLgVeBxYCdRFxV7FRtZotImIhZAeBQL+C42lRThCtTFIP4BbgexHxbtHxVJKkg4BFEVFTdCytqAsw\nDLgqInYB3qedNTs0lNrdDwYGAlsBm0g6ptiorCU4QbQiSV3JksMNEfH7ouNpBSOAMZJeBaYC+0j6\nbbEhVVwnN8H/AAAEUElEQVQtUBsR9bXDm8kSRnu2L/BKRCyOiBXA74EvFRxTa3lT0pYA6X1RwfG0\nKCeIViJJZO3ScyLisqLjaQ0RcW5EVEVENdlJy3sjol0fWUbE34H5krZLRaNo/13Wvw7sKWnj9Hc+\ninZ+Yr7ETOD4NHw8MKPAWFpcm+lqowMYARwLPCPpyVR2XkTcUWBMVhlnADekPsVeBr5dcDwVFRF/\nkXQz8DjZ1XpP0A67oJB0IzAS6COpFjgfuASYJulEskQ5trgIW5672jAzs1xuYjIzs1xOEGZmlssJ\nwszMcjlBmJlZLicIMzPL5QRh7YKkTyQ9WfKqboF1nizpuDQ8SdLha7HsQamrjackPS/pOw3XuZ6x\n7SJpjf6tJD2a3m8tuYHrM5IeTP0kmZXNfzDWXiyPiKEtucKI+O91WS7dMT8R2D0iaiV1A6rXZ505\nzgMuarDdbYF56Wa1z5X0EfSxpHuAccANLbR96wBcg7B2S1K1pIckPZ5eX0rlIyU9IGmapJckXSLp\naEl/lfSMpC+k+S6Q9IMG6xwlaXrJ+H6SGnab0pPs4GspQER8FBEvlq5T0lYNajyfSNpaUl9Jt0ia\nlV4jcvarJ7BzRDyVxjdKN1/eS3Yj1xzgi2m99UnzVuDo9fxIrYNxDcLai/ofScj6BTqUrF+c/SLi\nQ0mDgBuB4WmeIcAOZN03vwz8OiJ2Tw9yOgP4XiPbuRf4laS+EbGY7C7p60pniIi3JM0EXktH7rcD\nN0bEqpJ5FgBDASSdBnw1Il6TNAX4RUQ8LOnzwJ0pzlLDgWdL1rUcGCrpv8i6cxkMbBIRvypZ5llg\nt8Y/PrM1OUFYe5HXxNQV+GU6iv4E+GLJtFn1TTCS/gbUd0/9DPC1xjYSESHpN8Axkq4D9gLWOKcQ\nESdJGkzWkd0PgP2AExrOl2oIJwF7p6J9gR2zViIANpXUMz1DpN6WZF2KNzSYLBEcRdZhXmk8n0j6\nOGddZo1ygrD27F+AN8lqC52AD0umfVQyvKpkfBXN/19cB9yW1ve7iFiZN1NEPEPW99ZvgFdokCDS\nSeRrgDERsSwVdwL2SrWCxiwHVj/SU9K/AYcBXyB7xsg2wGhJf4qIs0qW68anPwOzJvkchLVnvYCF\nqWnnWLJHYa631Dy0APgR2WMoP0VSD0kjS4qGAq81mKcrMA34YUS8VDLpLuD0kvnyTrzPAbYtiecn\nZLWQ64A9gKciYnBpcpDUG6jvjtusLE4Q1p79F3C8pMfImpfeb8F13wDMj4i8rrwFnC3pxXRe5ELW\nbF76Etk5gQtLTlRvRXq2s6SnJT0PnNxw5RHxAtArnayu91XgIWB34LGcmL4GuOdgWyvuzdVsHUj6\nJfBERFxT0Pb/BXgvIsp61ne60urc+qupzMrhGoTZWpJUA+wMFPl0vKv49HmURqXnUtzq5GBryzUI\nMzPL5RqEmZnlcoIwM7NcThBmZpbLCcLMzHI5QZiZWa7/D7nvWLtvq2bhAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2a6591258d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2273,7 +2201,15 @@
     "for dataset in combine:\n",
     "    dataset['FamilySize'] = dataset['SibSp'] + dataset['Parch'] + 1\n",
     "\n",
-    "train_df[['FamilySize', 'Survived']].groupby(['FamilySize'], as_index=False).mean().sort_values(by='Survived', ascending=False)"
+    "train_df[['FamilySize', 'Survived']].groupby(['FamilySize'], as_index=False).mean().sort_values(by='Survived', ascending=False)\n",
+    "\n",
+    "\n",
+    "plt.hist(x = [train_df[train_df['Survived']==1]['FamilySize'], train_df[train_df['Survived']==0]['FamilySize']], \n",
+    "         stacked=True, color = ['g','r'],label = ['Survived','Dead'])\n",
+    "plt.title('Family Size Histogram by Survival')\n",
+    "plt.xlabel('Family Size (#)')\n",
+    "plt.ylabel('# of Passengers')\n",
+    "plt.legend()"
    ]
   },
   {
